go solution & table skeleton workflow
- did leetcode p1 in golang (all 3 solutions)
- leetcode table workflow updated
  - compile_backend.py creates info.json
  - compile_backend.sh copies that as problems.json into the data folder
  - leetcode table populates its entries as that
- abstracted language logo creation to langugage-svg.jsx

--- a/frontend/src/components/leetcode/styles/leetcode-table-entry.css
+++ b/frontend/src/components/leetcode/styles/leetcode-table-entry.css
@@ -4,6 +4,16 @@
 
 .leetcode-table-entry:hover {
     cursor: pointer;
-    background-color: var(--tertiary-color);
+    background-color: var(--secondary-color);
     white-space: pre-wrap;
+}
+
+.leetcode-table-entry-image-cell {
+    align-content: center;
+}
+
+.leetcode-table-entry-image {
+    width: 30px;
+    height: 100%;
+    align-content: center;
 }
