--- a/frontend/src/data/styles.css
+++ b/frontend/src/data/styles.css
@@ -2,9 +2,9 @@
     /* ------- colors ------- */
     --primary-color: #27272a;
     --secondary-color: #65656d;
-    --tertiary-color: #acacb4;
+    --tertiary-color: #e7e7ee;
     --quaternary-color: #e4e4e7;
-    --link-color: #14b8a6;
+    --link-color: #25c9b4;
     --primary-background-color: #c18031;
     /* ---------------------- */
 
