--- a/frontend/src/app/leetcode/[pno]/leetcode-pno.css
+++ b/frontend/src/app/leetcode/[pno]/leetcode-pno.css
@@ -8,6 +8,6 @@
     margin-right: 5px;
     border-radius: 5px;
     line-height: 30px;
-    background-color: var(--quaternary-color);
+    background-color: var(--tertiary-background-color);
     /*color: white;*/
 }
