--- a/frontend/src/components/common/styles/navbar.css
+++ b/frontend/src/components/common/styles/navbar.css
@@ -44,16 +44,16 @@
 }
 
 .nav-item.active a {
-    color: var(--link-color) !important;
+    color: var(--primary-color) !important;
 }
 
 .nav-item a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: var(--primary-text-color);
 }
 
 .nav-item a:hover {
-    color: var(--link-color);
+    color: var(--primary-color);
     transition: color 0.3s ease-in-out;
 }
 
