--- a/frontend/src/components/projects/styles/project.css
+++ b/frontend/src/components/projects/styles/project.css
@@ -6,7 +6,7 @@
     opacity: 0.8;
     height: 100%;
 
-    background-color: var(--quaternary-color);
+    background-color: var(--tertiary-background-color);
 }
 
 .project a {
@@ -20,7 +20,7 @@
 }
 
 .project:hover .project-link {
-    color: var(--link-color);
+    color: var(--primary-color);
     transition: color 0.3s ease-in-out;
 }
 
@@ -41,7 +41,7 @@
 
 .project-title {
     font-family: var(--secondary-font), serif;
-    color: var(--primary-color);
+    color: var(--primary-text-color);
     font-size: 16px;
     padding-top: 15px;
     margin-bottom: 1em;
@@ -49,14 +49,14 @@
 }
 
 .project-description {
-    color: var(--secondary-color);
+    color: var(--secondary-text-color);
     min-height: 60px;
 }
 
 .project-link {
     display: flex;
     align-items: center;
-    color: var(--secondary-color);
+    color: var(--secondary-text-color);
     font-size: 12px;
     padding-top: 20px;
 }
