--- a/frontend/src/app/main.css
+++ b/frontend/src/app/main.css
@@ -18,7 +18,7 @@
 }
 
 .page-content {
-    background-color: white;
+    background-color: var(--primary-background-color);
     position: relative;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .title {
-    color: var(--primary-color);
+    color: var(--primary-text-color);
     font-family: var(--secondary-font), serif;
     font-size: 45px;
     font-weight: 700;
@@ -59,7 +59,7 @@
 
 .subtitle {
     padding-top: 10px;
-    color: var(--secondary-color);
+    color: var(--secondary-text-color);
     font-size: 16px;
     line-height: 28px;
     width: 70%;
@@ -75,7 +75,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    border-top: 2px solid var(--tertiary-color);
+    border-top: 2px solid var(--secondary-background-color);
 }
 
 @media (max-width: 1270px) {
