--- a/frontend/src/components/common/styles/footer.css
+++ b/frontend/src/components/common/styles/footer.css
@@ -13,7 +13,7 @@
 }
 
 .footer-credits-text {
-    color: var(--tertiary-color);
+    color: var(--secondary-background-color);
     font-size: 14px;
     text-align: center;
 }
