--- a/frontend/src/components/leetcode/styles/leetcode-table-entry.css
+++ b/frontend/src/components/leetcode/styles/leetcode-table-entry.css
@@ -4,7 +4,7 @@
 
 .leetcode-table-entry:hover {
     cursor: pointer;
-    background-color: var(--secondary-color);
+    background-color: var(--secondary-text-color);
     white-space: pre-wrap;
 }
 
