--- a/frontend/src/components/common/styles/navbar.css
+++ b/frontend/src/components/common/styles/navbar.css
@@ -19,10 +19,10 @@
 .nav-background {
     width: fit-content;
     height: 40px;
-    padding-left: 0%;
-    padding-right: 0%;
+    padding-left: 0;
+    padding-right: 0;
     background: #fff;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 40px;
 }
 
@@ -59,18 +59,33 @@
 
 @media (max-width: 600px) {
     .navbar {
-        margin-left: 25%;
-        margin-right: 25%;
-        width: 80%;
+        /*margin-left: 25%;*/
+        /*margin-right: 25%;*/
+        width: 90%;
         font-size: 80%;
     }
 
     .nav-background {
-        width: 80%;
+        width: 90%;
         height: 40px;
     }
 
     .nav-item {
         font-weight: bold;
+    }
+
+    .nav-list {
+        display: flex;
+        /*justify-content: space-between;*/
+        padding-left: 30px;
+        gap: 0;
+        list-style: none;
+        align-items: center;
+    }
+
+    .nav-item {
+        font-weight: bold;
+        font-size: 80%;
+        color: var(--primary-text-color);
     }
 }
