--- a/frontend/src/components/leetcode/styles/leetcode-table.css
+++ b/frontend/src/components/leetcode/styles/leetcode-table.css
@@ -4,13 +4,15 @@
     margin-top: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 .leetcode-table {
     background-color: #19181b;
     margin: 20px 20px 20px 20px;
     border-collapse: collapse;
+    max-height: 600px;
+    overflow: auto;
 }
 
 .leetcode-table-header {
@@ -39,4 +41,20 @@
     width: 400px;
     font-weight: lighter;
     color: #e6e6e6;
+}
+
+@media (max-width: 600px) {
+    .leetcode-table td {
+        width: 200px;
+        font-weight: lighter;
+        color: #e6e6e6;
+    }
+
+    .leetcode-table-entry {
+        line-height: 16px;
+    }
+
+    .leetcode-table-entry-description {
+        display: none;
+    }
 }
